[gd_scene load_steps=11 format=3 uid="uid://bq3i0r2w5xp3q"]

[ext_resource type="Script" path="res://Scripts/Managers/game_manager.gd" id="1_rp6g5"]
[ext_resource type="PackedScene" uid="uid://b83hgq6s7mpyd" path="res://Scenes/Levels/BaseLevel.tscn" id="2_ucep5"]
[ext_resource type="PackedScene" uid="uid://2sr8g8gif7ty" path="res://Scenes/Managers/Audio/NarratroManager.tscn" id="3_j0g2r"]
[ext_resource type="Script" path="res://addons/ProCam2D/scripts/procam2d.gd" id="4_252y5"]
[ext_resource type="PackedScene" uid="uid://cymn6jxusf4ro" path="res://Scenes/Player.tscn" id="5_umdk7"]
[ext_resource type="Script" path="res://addons/ProCam2D/scripts/pcam_target.gd" id="6_e4gxv"]
[ext_resource type="PackedScene" uid="uid://ba5vrnuwv1krm" path="res://Scenes/Managers/UI/CounterUI.tscn" id="7_720u2"]
[ext_resource type="Script" path="res://addons/ProCam2D/scripts/pcam_room.gd" id="7_q08em"]
[ext_resource type="PackedScene" uid="uid://dqnnq75n6kw0e" path="res://Scenes/Managers/Audio/Settings.tscn" id="8_fr340"]
[ext_resource type="PackedScene" uid="uid://cc2yek0148opt" path="res://Scenes/Managers/Audio/MusicManager.tscn" id="10_botg0"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_rp6g5")

[node name="BaseLevel" parent="." instance=ExtResource("2_ucep5")]

[node name="Player" parent="." instance=ExtResource("5_umdk7")]
position = Vector2(178, 175)

[node name="PCamTarget" type="Node2D" parent="Player"]
script = ExtResource("6_e4gxv")

[node name="CameraStuff" type="Node" parent="."]

[node name="ProCam2D" type="Node2D" parent="CameraStuff"]
z_index = 4096
position = Vector2(244, 136)
script = ExtResource("4_252y5")
process_frame = 2
follow_mode = 0
drag_type = 0
smooth_drag = true
smooth_drag_speed = Vector2(5, 5)
max_distance = Vector2(100000, 100000)
offset = Vector2(0, 0)
smooth_offset = true
smooth_offset_speed = 2.0
allow_rotation = true
smooth_rotation = true
smooth_rotation_speed = 5.0
zoom = 1.0
smooth_zoom = true
smooth_zoom_speed = 5.0
auto_zoom = true
min_zoom = 0.0
max_zoom = 1.0
zoom_margin = 5.0
smooth_limit = true
left_limit = -10000000
right_limit = 10000000
top_limit = -10000000
bottom_limit = 10000000
use_h_margins = false
use_v_margins = false
working_radius = 2000.0
global_debug_draw = false

[node name="NarratroManager" parent="CameraStuff/ProCam2D" instance=ExtResource("3_j0g2r")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -240.0
offset_top = -137.0
offset_right = 240.0
offset_bottom = 138.0
grow_horizontal = 1
grow_vertical = 1

[node name="CounterUi" parent="CameraStuff/ProCam2D" instance=ExtResource("7_720u2")]
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -220.0
offset_top = -112.0
offset_right = -220.0
offset_bottom = -112.0
grow_horizontal = 0
grow_vertical = 1

[node name="Settings" parent="CameraStuff/ProCam2D" instance=ExtResource("8_fr340")]
visible = false

[node name="PCamMainRoom" type="Node2D" parent="CameraStuff"]
position = Vector2(240, 135)
script = ExtResource("7_q08em")
room_size = Vector2(480, 270)
zoom = 1.0
open_sides = 0

[node name="PCamLeftRoom" type="Node2D" parent="CameraStuff"]
position = Vector2(-240, 135)
script = ExtResource("7_q08em")
room_size = Vector2(480, 270)
zoom = 1.0
open_sides = 0

[node name="PCamRightRoom" type="Node2D" parent="CameraStuff"]
position = Vector2(720, 135)
script = ExtResource("7_q08em")
room_size = Vector2(480, 270)
zoom = 1.0
open_sides = 0

[node name="PCamTopRoom" type="Node2D" parent="CameraStuff"]
position = Vector2(-240, -135)
script = ExtResource("7_q08em")
room_size = Vector2(480, 270)
zoom = 1.0
open_sides = 0

[node name="Music" parent="." instance=ExtResource("10_botg0")]
